2 ano/2 semestre/LFA/Projeto/QuizGenerator/.antlr/QuizGeneratorParser.java
// Generated from /home/tabuas/Desktop/uni/lfa/Projeto2020/lfa1920-g01/QuizGenerator/QuizGenerator.g4 by ANTLR 4.7.1

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QuizGeneratorParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
            T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
            T__38 = 39, T__39 = 40, T__40 = 41, T__41 = 42, T__42 = 43, T__43 = 44, T__44 = 45,
            T__45 = 46, T__46 = 47, T__47 = 48, T__48 = 49, T__49 = 50, T__50 = 51, T__51 = 52,
            T__52 = 53, T__53 = 54, T__54 = 55, NUM = 56, ID = 57, WORD = 58, WS = 59, COMMENT = 60;
    public static final int
            RULE_program = 0, RULE_stat = 1, RULE_forBlock = 2, RULE_endf = 3, RULE_ifBlock = 4,
            RULE_endif = 5, RULE_other = 6, RULE_condition = 7, RULE_instructions = 8,
            RULE_createQuestion = 9, RULE_assignment = 10, RULE_declaration = 11,
            RULE_attribution = 12, RULE_expr = 13, RULE_type = 14, RULE_bdAttribution = 15,
            RULE_questionType = 16, RULE_questionDeclaration = 17, RULE_questionAttribution = 18,
            RULE_command = 19, RULE_mathExpr = 20, RULE_randMethod = 21, RULE_testType = 22,
            RULE_difficulty = 23;
    public static final String[] ruleNames = {
            "program", "stat", "forBlock", "endf", "ifBlock", "endif", "other", "condition",
            "instructions", "createQuestion", "assignment", "declaration", "attribution",
            "expr", "type", "bdAttribution", "questionType", "questionDeclaration",
            "questionAttribution", "command", "mathExpr", "randMethod", "testType",
            "difficulty"
    };

    private static final String[] _LITERAL_NAMES = {
            null, "'Begin'", "'create'", "'endcreate'", "';'", "'for'", "'in'", "':'",
            "'endfor'", "'if'", "'('", "')'", "'endif'", "'else'", "'=='", "'.correctAnswer()'",
            "'and'", "'or'", "'not'", "'>='", "'<='", "'>'", "'<'", "'Question'",
            "'.text'", "'='", "'.theme'", "'.difficulty'", "'.answer'", "','", "'.name'",
            "'[]'", "'['", "']'", "'String'", "'int'", "'double'", "'DB'", "'load'",
            "'.get'", "'answersMode'", "'.add'", "'rand'", "'.numAnswers'", "'print'",
            "'userAnswer'", "'*'", "'/'", "'+'", "'-'", "'.answers()'", "'multipleChoice'",
            "'trueOrFalse'", "'easy'", "'medium'", "'hard'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, "NUM", "ID", "WORD", "WS",
            "COMMENT"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "QuizGenerator.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public QuizGeneratorParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ProgramContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(QuizGeneratorParser.ID, 0);
        }

        public TerminalNode EOF() {
            return getToken(QuizGeneratorParser.EOF, 0);
        }

        public List<StatContext> stat() {
            return getRuleContexts(StatContext.class);
        }

        public StatContext stat(int i) {
            return getRuleContext(StatContext.class, i);
        }

        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_program;
        }
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(48);
                match(T__0);
                setState(49);
                match(T__1);
                setState(50);
                match(ID);
                setState(54);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__8) | (1L << T__22) | (1L << T__30) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__39) | (1L << T__41) | (1L << T__43) | (1L << ID))) != 0)) {
                    {
                        {
                            setState(51);
                            stat();
                        }
                    }
                    setState(56);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(57);
                match(T__2);
                setState(58);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StatContext extends ParserRuleContext {
        public StatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_stat;
        }

        public StatContext() {
        }

        public void copyFrom(StatContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class IfStatContext extends StatContext {
        public IfBlockContext ifBlock() {
            return getRuleContext(IfBlockContext.class, 0);
        }

        public IfStatContext(StatContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class InstStatContext extends StatContext {
        public InstructionsContext instructions() {
            return getRuleContext(InstructionsContext.class, 0);
        }

        public InstStatContext(StatContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class ForStatContext extends StatContext {
        public ForBlockContext forBlock() {
            return getRuleContext(ForBlockContext.class, 0);
        }

        public ForStatContext(StatContext ctx) {
            copyFrom(ctx);
        }
    }

    public final StatContext stat() throws RecognitionException {
        StatContext _localctx = new StatContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_stat);
        try {
            setState(65);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__22:
                case T__30:
                case T__33:
                case T__34:
                case T__35:
                case T__36:
                case T__39:
                case T__41:
                case T__43:
                case ID:
                    _localctx = new InstStatContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(60);
                    instructions();
                    setState(61);
                    match(T__3);
                }
                break;
                case T__4:
                    _localctx = new ForStatContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(63);
                    forBlock();
                }
                break;
                case T__8:
                    _localctx = new IfStatContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(64);
                    ifBlock();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ForBlockContext extends ParserRuleContext {
        public List<TerminalNode> ID() {
            return getTokens(QuizGeneratorParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(QuizGeneratorParser.ID, i);
        }

        public EndfContext endf() {
            return getRuleContext(EndfContext.class, 0);
        }

        public List<StatContext> stat() {
            return getRuleContexts(StatContext.class);
        }

        public StatContext stat(int i) {
            return getRuleContext(StatContext.class, i);
        }

        public ForBlockContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_forBlock;
        }
    }

    public final ForBlockContext forBlock() throws RecognitionException {
        ForBlockContext _localctx = new ForBlockContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_forBlock);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(67);
                match(T__4);
                setState(68);
                match(ID);
                setState(69);
                match(T__5);
                setState(70);
                match(ID);
                setState(71);
                match(T__6);
                setState(73);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(72);
                            stat();
                        }
                    }
                    setState(75);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__8) | (1L << T__22) | (1L << T__30) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__39) | (1L << T__41) | (1L << T__43) | (1L << ID))) != 0));
                setState(77);
                endf();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class EndfContext extends ParserRuleContext {
        public EndfContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_endf;
        }
    }

    public final EndfContext endf() throws RecognitionException {
        EndfContext _localctx = new EndfContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_endf);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(79);
                match(T__7);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class IfBlockContext extends ParserRuleContext {
        public ConditionContext condition() {
            return getRuleContext(ConditionContext.class, 0);
        }

        public EndifContext endif() {
            return getRuleContext(EndifContext.class, 0);
        }

        public List<StatContext> stat() {
            return getRuleContexts(StatContext.class);
        }

        public StatContext stat(int i) {
            return getRuleContext(StatContext.class, i);
        }

        public OtherContext other() {
            return getRuleContext(OtherContext.class, 0);
        }

        public IfBlockContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_ifBlock;
        }
    }

    public final IfBlockContext ifBlock() throws RecognitionException {
        IfBlockContext _localctx = new IfBlockContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_ifBlock);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(81);
                match(T__8);
                setState(82);
                match(T__9);
                setState(83);
                condition();
                setState(84);
                match(T__10);
                setState(85);
                match(T__6);
                setState(87);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(86);
                            stat();
                        }
                    }
                    setState(89);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__8) | (1L << T__22) | (1L << T__30) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__39) | (1L << T__41) | (1L << T__43) | (1L << ID))) != 0));
                setState(92);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__12) {
                    {
                        setState(91);
                        other();
                    }
                }

                setState(94);
                endif();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class EndifContext extends ParserRuleContext {
        public EndifContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_endif;
        }
    }

    public final EndifContext endif() throws RecognitionException {
        EndifContext _localctx = new EndifContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_endif);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(96);
                match(T__11);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OtherContext extends ParserRuleContext {
        public List<StatContext> stat() {
            return getRuleContexts(StatContext.class);
        }

        public StatContext stat(int i) {
            return getRuleContext(StatContext.class, i);
        }

        public OtherContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_other;
        }
    }

    public final OtherContext other() throws RecognitionException {
        OtherContext _localctx = new OtherContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_other);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(98);
                match(T__12);
                setState(99);
                match(T__6);
                setState(101);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(100);
                            stat();
                        }
                    }
                    setState(103);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__8) | (1L << T__22) | (1L << T__30) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__39) | (1L << T__41) | (1L << T__43) | (1L << ID))) != 0));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ConditionContext extends ParserRuleContext {
        public ConditionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_condition;
        }

        public ConditionContext() {
        }

        public void copyFrom(ConditionContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class CondLowEqContext extends ConditionContext {
        public List<MathExprContext> mathExpr() {
            return getRuleContexts(MathExprContext.class);
        }

        public MathExprContext mathExpr(int i) {
            return getRuleContext(MathExprContext.class, i);
        }

        public CondLowEqContext(ConditionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class CondEqualsContext extends ConditionContext {
        public List<MathExprContext> mathExpr() {
            return getRuleContexts(MathExprContext.class);
        }

        public MathExprContext mathExpr(int i) {
            return getRuleContext(MathExprContext.class, i);
        }

        public CondEqualsContext(ConditionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class CondBigContext extends ConditionContext {
        public List<MathExprContext> mathExpr() {
            return getRuleContexts(MathExprContext.class);
        }

        public MathExprContext mathExpr(int i) {
            return getRuleContext(MathExprContext.class, i);
        }

        public CondBigContext(ConditionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class CondBigEqContext extends ConditionContext {
        public List<MathExprContext> mathExpr() {
            return getRuleContexts(MathExprContext.class);
        }

        public MathExprContext mathExpr(int i) {
            return getRuleContext(MathExprContext.class, i);
        }

        public CondBigEqContext(ConditionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class CondCorrectAnswerContext extends ConditionContext {
        public MathExprContext mathExpr() {
            return getRuleContext(MathExprContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(QuizGeneratorParser.ID, 0);
        }

        public CondCorrectAnswerContext(ConditionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class CondAndContext extends ConditionContext {
        public List<MathExprContext> mathExpr() {
            return getRuleContexts(MathExprContext.class);
        }

        public MathExprContext mathExpr(int i) {
            return getRuleContext(MathExprContext.class, i);
        }

        public CondAndContext(ConditionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class CondOrContext extends ConditionContext {
        public List<MathExprContext> mathExpr() {
            return getRuleContexts(MathExprContext.class);
        }

        public MathExprContext mathExpr(int i) {
            return getRuleContext(MathExprContext.class, i);
        }

        public CondOrContext(ConditionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class CondLowContext extends ConditionContext {
        public List<MathExprContext> mathExpr() {
            return getRuleContexts(MathExprContext.class);
        }

        public MathExprContext mathExpr(int i) {
            return getRuleContext(MathExprContext.class, i);
        }

        public CondLowContext(ConditionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class CondNotContext extends ConditionContext {
        public MathExprContext mathExpr() {
            return getRuleContext(MathExprContext.class, 0);
        }

        public CondNotContext(ConditionContext ctx) {
            copyFrom(ctx);
        }
    }

    public final ConditionContext condition() throws RecognitionException {
        ConditionContext _localctx = new ConditionContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_condition);
        try {
            setState(140);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                case 1:
                    _localctx = new CondCorrectAnswerContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(105);
                    mathExpr(0);
                    setState(106);
                    match(T__13);
                    setState(107);
                    match(ID);
                    setState(108);
                    match(T__14);
                }
                break;
                case 2:
                    _localctx = new CondAndContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(110);
                    mathExpr(0);
                    setState(111);
                    match(T__15);
                    setState(112);
                    mathExpr(0);
                }
                break;
                case 3:
                    _localctx = new CondOrContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(114);
                    mathExpr(0);
                    setState(115);
                    match(T__16);
                    setState(116);
                    mathExpr(0);
                }
                break;
                case 4:
                    _localctx = new CondNotContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(118);
                    match(T__17);
                    setState(119);
                    mathExpr(0);
                }
                break;
                case 5:
                    _localctx = new CondEqualsContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                {
                    setState(120);
                    mathExpr(0);
                    setState(121);
                    match(T__13);
                    setState(122);
                    mathExpr(0);
                }
                break;
                case 6:
                    _localctx = new CondBigEqContext(_localctx);
                    enterOuterAlt(_localctx, 6);
                {
                    setState(124);
                    mathExpr(0);
                    setState(125);
                    match(T__18);
                    setState(126);
                    mathExpr(0);
                }
                break;
                case 7:
                    _localctx = new CondLowEqContext(_localctx);
                    enterOuterAlt(_localctx, 7);
                {
                    setState(128);
                    mathExpr(0);
                    setState(129);
                    match(T__19);
                    setState(130);
                    mathExpr(0);
                }
                break;
                case 8:
                    _localctx = new CondBigContext(_localctx);
                    enterOuterAlt(_localctx, 8);
                {
                    setState(132);
                    mathExpr(0);
                    setState(133);
                    match(T__20);
                    setState(134);
                    mathExpr(0);
                }
                break;
                case 9:
                    _localctx = new CondLowContext(_localctx);
                    enterOuterAlt(_localctx, 9);
                {
                    setState(136);
                    mathExpr(0);
                    setState(137);
                    match(T__21);
                    setState(138);
                    mathExpr(0);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class InstructionsContext extends ParserRuleContext {
        public InstructionsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_instructions;
        }

        public InstructionsContext() {
        }

        public void copyFrom(InstructionsContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class CommandInstContext extends InstructionsContext {
        public CommandContext command() {
            return getRuleContext(CommandContext.class, 0);
        }

        public CommandInstContext(InstructionsContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class AssignInstContext extends InstructionsContext {
        public AssignmentContext assignment() {
            return getRuleContext(AssignmentContext.class, 0);
        }

        public AssignInstContext(InstructionsContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class QuestInstContext extends InstructionsContext {
        public CreateQuestionContext createQuestion() {
            return getRuleContext(CreateQuestionContext.class, 0);
        }

        public QuestInstContext(InstructionsContext ctx) {
            copyFrom(ctx);
        }
    }

    public final InstructionsContext instructions() throws RecognitionException {
        InstructionsContext _localctx = new InstructionsContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_instructions);
        try {
            setState(145);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                case 1:
                    _localctx = new AssignInstContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(142);
                    assignment();
                }
                break;
                case 2:
                    _localctx = new CommandInstContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(143);
                    command();
                }
                break;
                case 3:
                    _localctx = new QuestInstContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(144);
                    createQuestion();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CreateQuestionContext extends ParserRuleContext {
        public CreateQuestionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_createQuestion;
        }

        public CreateQuestionContext() {
        }

        public void copyFrom(CreateQuestionContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class CreateQuestionThemeContext extends CreateQuestionContext {
        public TerminalNode ID() {
            return getToken(QuizGeneratorParser.ID, 0);
        }

        public TerminalNode WORD() {
            return getToken(QuizGeneratorParser.WORD, 0);
        }

        public CreateQuestionThemeContext(CreateQuestionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class CreateQuestionAnswerContext extends CreateQuestionContext {
        public TerminalNode ID() {
            return getToken(QuizGeneratorParser.ID, 0);
        }

        public TerminalNode WORD() {
            return getToken(QuizGeneratorParser.WORD, 0);
        }

        public TerminalNode NUM() {
            return getToken(QuizGeneratorParser.NUM, 0);
        }

        public CreateQuestionAnswerContext(CreateQuestionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class CreateQuestionDifficultyContext extends CreateQuestionContext {
        public TerminalNode ID() {
            return getToken(QuizGeneratorParser.ID, 0);
        }

        public DifficultyContext difficulty() {
            return getRuleContext(DifficultyContext.class, 0);
        }

        public CreateQuestionDifficultyContext(CreateQuestionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class CreateQuestionphraseContext extends CreateQuestionContext {
        public TerminalNode ID() {
            return getToken(QuizGeneratorParser.ID, 0);
        }

        public TerminalNode WORD() {
            return getToken(QuizGeneratorParser.WORD, 0);
        }

        public CreateQuestionphraseContext(CreateQuestionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class CreateQuestionNameContext extends CreateQuestionContext {
        public TerminalNode ID() {
            return getToken(QuizGeneratorParser.ID, 0);
        }

        public TerminalNode WORD() {
            return getToken(QuizGeneratorParser.WORD, 0);
        }

        public CreateQuestionNameContext(CreateQuestionContext ctx) {
            copyFrom(ctx);
        }
    }

    public final CreateQuestionContext createQuestion() throws RecognitionException {
        CreateQuestionContext _localctx = new CreateQuestionContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_createQuestion);
        try {
            setState(171);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
                case 1:
                    _localctx = new CreateQuestionphraseContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(147);
                    match(T__22);
                    setState(148);
                    match(ID);
                    setState(149);
                    match(T__23);
                    setState(150);
                    match(T__24);
                    setState(151);
                    match(WORD);
                }
                break;
                case 2:
                    _localctx = new CreateQuestionThemeContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(152);
                    match(ID);
                    setState(153);
                    match(T__25);
                    setState(154);
                    match(T__24);
                    setState(155);
                    match(WORD);
                }
                break;
                case 3:
                    _localctx = new CreateQuestionDifficultyContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(156);
                    match(ID);
                    setState(157);
                    match(T__26);
                    setState(158);
                    match(T__24);
                    setState(159);
                    difficulty();
                }
                break;
                case 4:
                    _localctx = new CreateQuestionAnswerContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(160);
                    match(ID);
                    setState(161);
                    match(T__27);
                    setState(162);
                    match(T__9);
                    setState(163);
                    match(WORD);
                    setState(164);
                    match(T__28);
                    setState(165);
                    match(NUM);
                    setState(166);
                    match(T__10);
                }
                break;
                case 5:
                    _localctx = new CreateQuestionNameContext(_localctx);
                    enterOuterAlt(_localctx, 5);
                {
                    setState(167);
                    match(ID);
                    setState(168);
                    match(T__29);
                    setState(169);
                    match(T__24);
                    setState(170);
                    match(WORD);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AssignmentContext extends ParserRuleContext {
        public AssignmentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_assignment;
        }

        public AssignmentContext() {
        }

        public void copyFrom(AssignmentContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class DeclarAssignContext extends AssignmentContext {
        public DeclarationContext declaration() {
            return getRuleContext(DeclarationContext.class, 0);
        }

        public DeclarAssignContext(AssignmentContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class QuestDeclarAssignContext extends AssignmentContext {
        public QuestionDeclarationContext questionDeclaration() {
            return getRuleContext(QuestionDeclarationContext.class, 0);
        }

        public QuestDeclarAssignContext(AssignmentContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class QuestAttribAssignContext extends AssignmentContext {
        public QuestionAttributionContext questionAttribution() {
            return getRuleContext(QuestionAttributionContext.class, 0);
        }

        public QuestAttribAssignContext(AssignmentContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class AttribAssignContext extends AssignmentContext {
        public AttributionContext attribution() {
            return getRuleContext(AttributionContext.class, 0);
        }
